[workspace]
resolver = "2"
members = [
	"cvlr-vectors",
]

[workspace.package]
version = "0.4.0"
authors = [
    "Arie Gurfinkel <arie@certora.com>",
    "Jorge A. Navas <jorge@certora.com>",
]
description = "CVLR Collections for Formal Verification"
edition = "2021"
documentation = "https://docs.rs/cvlr/latest"
license = "MIT"
keywords = [
    "certora", 
    "assert", 
    "logic", 
    "verification", 
    "formal-methods",
]
categories = [
    "development-tools::debugging", 
    "development-tools::testing", 
]
readme = "README.md"
homepage = "https://www.certora.com"
repository = "https://github.com/Certora/cvlr-collections"



[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
macrotest = "1"
trybuild = "1"

cvlr-asserts = ">=0.4.0, <1"
cvlr-nondet = ">=0.4.0, <1"
