[package]
name = "cvlr-vectors"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
borsh0_10 = { package = "borsh", version = "0.10" }
borsh0_9 = { package = "borsh", version = "0.9" }
cvlr-asserts = { workspace = true }
cvlr-nondet = { workspace = true }

[features]
certora-debug = []

